--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
+    "@vercel/kv": "^3.0.0",
     "dotenv": "^17.3.1",
     "https-proxy-agent": "^7.0.6",
     "lucide-react": "^0.563.0",
@@ -19,6 +20,7 @@
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "recharts": "^3.7.0",
+    "resend": "^6.9.2",
     "rss-parser": "^3.13.0",
     "yahoo-finance2": "^3.13.0"
   },
